# spdz_codebase

./: CMakeLists.txt  README.md  common.h  main.cpp  spdz_connector.cc  spdz_connector.h
spdz_replace/: Makefile  Setup.h  add_computation.mpc
